# Divar_advanced_scraping

./: .gitignore  Blueprint.md  README.md  requirements.txt  t.json
.trae/documents/: Divar Motorcycles Scraper — Implementation Plan (Async Playwright + lxml + asyncpg).md
divar_lib_client/: README.md  requirements.txt
divar_lib_client/src/: __init__.py  db.py  main.py  scrape_divar_lib.py  utils.py
logs/: scrape.jsonl
perf_opt/: README.md  pyproject.toml  requirements.txt
perf_opt/scripts/: build_zipapp.py  run_bench.py  run_bench_compare.py
perf_opt/src/perf_opt/: __init__.py  benchmark.py  cli.py  datastructures.py  engine.py  parallel.py  profiling.py  viz.py
perf_opt/src/perf_opt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
perf_opt/tests/: test_benchmark.py  test_datastructures.py  test_engine.py  test_parallel.py  test_profiling.py
scripts/: clean_data.py  diagnose_http_details.py  http_scrape_multi.py
src/: __init__.py  config.py  db.py  main.py  parser.py  run.py  scraper.py  utils.py
src/scraper/: __init__.py  api_listing.py  db.py  detail_scraper.py  http_client.py  listing_scraper.py  metrics.py  utils.py
src/scraper_async/: detail.py  http.py  listing.py
tests/: run_basic_tests.py  test_parser.py  test_parser_fixtures.py
tests/fixtures/: ad_sample.html  listing_snapshot.html
web_ui/: __init__.py  app.py  db.py  requirements.txt
web_ui/static/: app.js  styles.css
web_ui/templates/: index.html
